improving CSS, particularly for header h1

--- a/index.html
+++ b/index.html
@@ -30,13 +30,11 @@
     <!-- Header!
     ================================================== -->
     <header class="container">
-      <h1 class="muted"><span class="one">design</span>#<span class="two">code</span></h1>
+      <h1 class="muted">design<span>#</span>code</h1>
     </header> <!-- /container -->
 
     <!-- Main Page Contents!
     ================================================== -->
-    <hr class="container add-top add-bottom" />
-
     <section class="container main">
       <div class="row">
 
@@ -158,8 +156,8 @@
             <!-- EINSTEIN QUOTE! -->
             <div class="slide span12" data-cycle-hash="two">
               <div class="row toprow">
-                <h2 class="span8 offset2 bigquote">&ldquo;If at first, the idea is not absurd, then there is no hope for it.&rdquo;</h2>
-                <p class="span8 offset2">Albert Einstein</p>
+                <h2 class="span8 offset2 bigquote"><span>&ldquo;</span>If at first, the idea is not absurd, then there is no hope for it.<span>&rdquo;</span></h2>
+                <p class="span8 offset2 byline">&mdash; Albert Einstein</p>
               </div>
             </div>
             <!-- END EINSTEIN QUOTE! -->
@@ -253,13 +251,11 @@ through readily integrate multiple perspectives and lines of inquiry; help teams
             <!-- Giant Explanation image -->
             <div class="slide span12" data-cycle-hash="eight">
               <div class="row toprow">
-                <p class="span4 offset4">[QUICK IMAGE SLIDESHOW TO REVEAL]
-                <h2 class="span4 offset4 muted">design#code</h2>
+                <h2 class="span4 offset4 muted">design<span>#</span>code</h2>
               </div>
               <div class="row bottomrow">
                 <div class="span4 offset4">
-                  <p>Or, let us watch it for you.</p>
-                  <p>[EMAIL CAPTURE FIELD]</p>
+                  <p>A system for developing breakthrough solutions in the form factor of services</p>
                 </div>
               </div>
             </div>
@@ -270,7 +266,7 @@ through readily integrate multiple perspectives and lines of inquiry; help teams
             <!-- Email Capture -->
             <div class="slide span12" data-cycle-hash="nine">
               <div class="row toprow">
-                <p class="span4 offset4 lead">Watch this Space</p>
+                <h1 class="span4 offset4 jumbo">Watch this Space</h1>
               </div>
               <div class="row bottomrow">
                 <div class="span4 offset4">
