--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
     <!-- Header!
     ================================================== -->
     <header class="container">
-      <h1 class="muted">design<span>#</span>code</h1>
+      <div class="masthead">
+        <ul class="nav nav-pills pull-right">
+          <li class="active"><a href="#">intro</a></li>
+          <li><a href="#">logic</a></li>
+          <li><a href="#">stay informed</a></li>
+        </ul>
+        <h1 class="muted">design<span>#</span>code</h1>
+      </div>
     </header> <!-- /container -->
 
     <!-- Main Page Contents!
@@ -251,7 +258,14 @@ through readily integrate multiple perspectives and lines of inquiry; help teams
             <!-- Giant Explanation image -->
             <div class="slide span12" data-cycle-hash="eight">
               <div class="row toprow">
-                <h2 class="span4 offset4 muted">design<span>#</span>code</h2>
+                <div class="span4 offset4 reveal">
+                  <img class="fadeorder one" src="img/end1-beam.png"/>
+                  <img class="fadeorder two"  src="img/end2-story.png"/>
+                  <img class="fadeorder three"  src="img/end3-quilt.png"/>
+                  <img class="fadeorder four"  src="img/end4-target.png"/>
+                  <img class="fadeorder five"  src="img/end5-grid.png"/>
+                  <h2 class="muted jumbo text-center fadeoreder six">design<span>#</span>code</h2>
+                </div>
               </div>
               <div class="row bottomrow">
                 <div class="span4 offset4">
@@ -266,7 +280,7 @@ through readily integrate multiple perspectives and lines of inquiry; help teams
             <!-- Email Capture -->
             <div class="slide span12" data-cycle-hash="nine">
               <div class="row toprow">
-                <h1 class="span4 offset4 jumbo">Watch this Space</h1>
+                <h1 class="span6 offset3 jumbo text-center">Watch this Space</h1>
               </div>
               <div class="row bottomrow">
                 <div class="span4 offset4">
