updating nav structure

--- a/index.html
+++ b/index.html
@@ -29,16 +29,22 @@
 
     <!-- Header!
     ================================================== -->
+    <!-- & Nav!
+    ================================================== -->
     <header class="container">
       <div class="masthead">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a href="#">intro</a></li>
-          <li><a href="#">logic</a></li>
-          <li><a href="#">stay informed</a></li>
+          <li class="active"><a href="#intro">intro</a></li>
+          <li><a href="#logic">logic</a></li>
+          <li><a href="#stayinformed">stay informed</a></li>
         </ul>
         <h1 class="muted">design<span>#</span>code</h1>
       </div>
     </header> <!-- /container -->
+    <!-- / & Nav!
+    ================================================== -->
+    <!-- / Header!
+    ================================================== -->
 
     <!-- Main Page Contents!
     ================================================== -->
