--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!-- Intro!
     ================================================== -->
-    <article id="intro" class="subsection">
+    <article id="intro" class="subsection stack">
       <section class="container">
         <div class="row">
           <!-column 1 -->
@@ -53,6 +53,7 @@
               data-cycle-slides="> div.slide"
               data-cycle-auto-height="3"
               data-cycle-allow-wrap="false"
+              data-cycle-hide-non-active="true"
               >
               <!-- end SS declarations -->
               <div class="slide">
@@ -60,15 +61,15 @@
                 <p>This equation governs the value an entire class of goods;</p>
               </div>
               <div class="slide">
-                <p class="purplebg lead postit">The distinction between goods and services is a deeply-ingrained fallacy.</p>
+                <div class="purplebg postit"><p class="lead bottomalign">The distinction between goods and services is a deeply-ingrained fallacy.</p></div>
                 <p>Beyond the obvious and superficial, when customers pay for a service, aren&rsquo;t they paying for &ldquo;goods?&rdquo; It&rsquo;s time to right a wrong.</p>
               </div>
               <div class="slide">
-                <p class="bluebg lead postit">Services deliver particular outcomes and experiences when and where needed.</p>
-                <p>Think of the many ways to pay for something or getting somewhere. <br/>Outcomes are the “goods” and experience is the “packaging”. <br/>Post-industrial goods, or PIGS.</p>
+                <div class="bluebg postit"><p class="lead bottomalign">Services deliver particular outcomes and experiences when and where needed.</p></div>
+                <p>Think of the many ways to pay for something or getting somewhere. <br/><br/>Outcomes are the “goods” and experience is the “packaging”. <br/><br/>Post-industrial goods, or PIGS.</p>
               </div>
               <div class="slide">
-                <p class="greenbg lead postit">Services are guaranteed sets of outcomes & experiences; delivered by the rendering of a customer asset, or the renting of a resource; within a particular space, time or platform.</p>
+                <div class="greenbg postit"><p class="lead bottomalign">Services are guaranteed sets of outcomes & experiences; delivered by the rendering of a customer asset, or the renting of a resource; within a particular space, time or platform.</p></div>
                 <p>Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>P/E = Total Cost of Utilization, or TCU</p>
               </div>
               <!-- pager! -->
@@ -86,21 +87,22 @@
               data-cycle-slides="> div.slide"
               data-cycle-auto-height="3"
               data-cycle-allow-wrap="false"
+              data-cycle-hide-non-active="true"
               >
               <div class="slide">
                 <img src="img/openasic.jpg"/>
                 <p class="">It determines success in delivering complex value propositions;</p>
               </div>
               <div class="slide">
-                <p class="purplebg lead postit">Why do some services flourish and others, forgive the pun, flounder?</p>
-                <p class="">What gives some category leaders immunity from challengers? <br/>What gives some challengers the impunity to take on establishments?</p>
+                <div class="purplebg postit"><p class="lead bottomalign">Why do some services flourish and others, forgive the pun, flounder?</p></div>
+                <p class="">What gives some category leaders immunity from challengers? <br/><br/>What gives some challengers the impunity to take on establishments?</p>
               </div>
               <div class="slide">
-                <p class="bluebg lead postit">Their services are hardier and more resistant to industry factors; costs & risks every player is exposed to.</p>
+                <div class="bluebg postit"><p class="lead bottomalign">Their services are hardier and more resistant to industry factors; costs & risks every player is exposed to.</p></div>
                 <p class="">Superior design provides an unfair advantage they fully exploit. Think of design as genetic code.</p>
               </div>
               <div class="slide">
-                <p class="greenbg lead postit">They package and deliver outcomes better than others; making sure that the quality of experience is not just a matter of users feeling good.</p>
+                <div class="greenbg postit"><p class="lead bottomalign">They package and deliver outcomes better than others; making sure that the quality of experience is not just a matter of users feeling good.</p></div>
                 <p class="">Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>P/E = Total Cost of Utilization, or TCU</p>
               </div>
               <!-- pager! -->
@@ -118,21 +120,22 @@
               data-cycle-slides="> div.slide"
               data-cycle-auto-height="3"
               data-cycle-allow-wrap="false"
+              data-cycle-hide-non-active="true"
               >
               <div class="slide">
                 <img src="img/openasic.jpg"/>
                 <p>It shapes business strategy and government policy;</p>
               </div>
               <div class="slide">
-                <p class="purplebg lead postit">The business model is pitch perfect and the strategy is sound. <br/>Government policy is clear about about what’s best in the public interest.</p>
+                <div class="purplebg postit"><p class="lead bottomalign">The business model is pitch perfect and the strategy is sound. <br/><br/>Government policy is clear about about what’s best in the public interest.</p></div>
                 <p>How do you make sure policy and strategy won’t fall flat in implementation and operation?</p>
               </div>
               <div class="slide">
-                <p class="bluebg lead postit">Every layer and unit in the enterprise should correctly read, interpret and execute policy and strategy.</p>
+                <div class="bluebg postit"><p class="lead bottomalign">Every layer and unit in the enterprise should correctly read, interpret and execute policy and strategy.</p></div>
                 <p>Design is an expression of policy and strategy in the form of code; we know good code makes all the difference.</p>
               </div>
               <div class="slide">
-                <p class="greenbg lead postit">Good design reduces the risk the expected value fails to materialize. <br/>Great design creates unexpected value with superior outcomes and experiences at a lower cost.</p>
+                <div class="greenbg postit"><p class="lead bottomalign">Good design reduces the risk the expected value fails to materialize. <br/><br/>Great design creates unexpected value with superior outcomes and experiences at a lower cost.</p></div>
                 <p>Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>P/E = Total Cost of Utilization, or TCU</p>
               </div>
               <!-- pager! -->
@@ -148,7 +151,7 @@
 
     <!-- Einstein Quote!
     ================================================== -->
-    <article id="quote" class="subsection">
+    <article id="quote" class="subsection stack">
       <section class="container">
         <div class="row">
           <h2 class="span8 offset2 bigquote"><span>&ldquo;</span>If at first, the idea is not absurd, then there is no hope for it.<span>&rdquo;</span></h2>
@@ -175,6 +178,7 @@
               data-cycle-slides="> div.slide"
               data-cycle-auto-height="6"
               data-cycle-allow-wrap="false"
+              data-cycle-hide-non-active="true"
               >
               
               <!-- SECTION 3 -->
@@ -265,24 +269,18 @@
               <!-- Giant Explanation image -->
               <div class="slide span12" data-cycle-hash="eight" id="revealing"> 
                 <div class="row toprow">
-                  <div class="span4 offset4 reveal cycle-slideshow inner-slideshow"
-                    data-cycle-fx="fadeOut"
-                    data-cycle-timeout="500"
-                    data-cycle-slides="> div"
-                    data-cycle-loop="1"
-                    data-cycle-allow-wrap="false"
-                    >
-                    <div><img class="fadeorder one" src="img/end1-beam.png"/></div>
-                    <div><img class="fadeorder two"  src="img/end2-story.png"/></div>
-                    <div><img class="fadeorder three"  src="img/end3-quilt.png"/></div>
-                    <div><img class="fadeorder four"  src="img/end4-target.png"/></div>
-                    <div><img class="fadeorder five"  src="img/end5-grid.png"/></div>
-                    <div><h2 class="muted jumbo text-center fadeoreder six">design<span>#</span>code</h2></div>
+                  <div class="span4 offset4 reveal">
+                    <img class="fadeorder one" src="img/end1-beam.png"/>
+                    <img class="fadeorder two"  src="img/end2-story.png"/>
+                    <img class="fadeorder three"  src="img/end3-quilt.png"/>
+                    <img class="fadeorder four"  src="img/end4-target.png"/>
+                    <img class="fadeorder five"  src="img/end5-grid.png"/>
+                    <h2 class="muted jumbo text-center fadeorder six">design<span>#</span>code</h2>
                   </div>
                 </div>
                 <div class="row bottomrow">
                   <div class="span4 offset4">
-                    <p>A system for developing breakthrough solutions in the form factor of services</p>
+                    <p class="fadeorder six">A system for developing breakthrough solutions in the form factor of services</p>
                   </div>
                 </div>
               </div>
