--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     <!-- & Nav!
     ================================================== -->
     <header class="container">
-       <div class="masthead">
+       <nav class="masthead">
          <ul class="nav nav-pills pull-right">
-           <li class="active"><a class="scroll" href="#intro">intro</a></li>
-           <li><a class="scroll" href="#logic">logic</a></li>
+           <li class="active"><a class="scroll" href="#intro">start</a></li>
+           <li><a class="scroll" href="#logic">middle</a></li>
            <li><a class="scroll" href="#stayinformed">stay informed</a></li>
          </ul>
          <h1 class="muted">design<span>#</span>code</h1>
-       </div>
+       </nav>
     </header> <!-- /container -->
     <!-- / & Nav!
     ================================================== -->
@@ -52,15 +52,15 @@
       <section class="container">
         <div class="row">
           <!-column 1 -->
-          <div class="span4 columnss">
-            <div class="cycle-slideshow uno"
+          <div class="span4 columnss uno">
+            <div class="cycle-slideshow"
               data-cycle-fx="fade"
               data-cycle-timeout="0"
               data-cycle-next="> div.slide"
               data-cycle-slides="> div.slide"
               data-cycle-auto-height="3"
               data-cycle-allow-wrap="false"
-              data-cycle-hide-non-active="true"
+              data-cycle-loop="1"
               >
               <!-- end SS declarations -->
               <div class="slide">
@@ -75,7 +75,7 @@
                 <div class="bluebg postit"><p class="lead bottomalign">Services deliver particular outcomes and experiences when and where needed.</p></div>
                 <p>Think of the many ways to pay for something or getting somewhere. <br/><br/>Outcomes are the “goods” and experience is the “packaging”. <br/><br/>Post-industrial goods, or PIGS.</p>
               </div>
-              <div class="slide">
+              <div class="slide last">
                 <div class="greenbg postit"><p class="lead bottomalign">Services are guaranteed sets of outcomes & experiences; delivered by the rendering of a customer asset, or the renting of a resource; within a particular space, time or platform.</p></div>
                 <p>Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>P/E = Total Cost of Utilization, or TCU</p>
               </div>
@@ -86,15 +86,15 @@
           <!-- /END COLUMN 1 -->
           
           <!-column 2 -->
-          <div class="span4 columnss">
-            <div class="cycle-slideshow dos"
+          <div class="span4 columnss dos">
+            <div class="cycle-slideshow"
               data-cycle-fx="fade"
               data-cycle-timeout="0"
               data-cycle-next="> div.slide"
               data-cycle-slides="> div.slide"
               data-cycle-auto-height="3"
               data-cycle-allow-wrap="false"
-              data-cycle-hide-non-active="true"
+              data-cycle-loop="1"
               >
               <div class="slide">
                 <img src="img/openasic.jpg"/>
@@ -119,15 +119,15 @@
           <!-- /END COLUMN 2 -->
           
           <!-column 3 -->
-          <div class="span4 columnss">
-            <div class="cycle-slideshow tres"
+          <div class="span4 columnss tres">
+            <div class="cycle-slideshow"
               data-cycle-fx="fade"
               data-cycle-timeout="0"
               data-cycle-next="> div.slide"
               data-cycle-slides="> div.slide"
               data-cycle-auto-height="3"
               data-cycle-allow-wrap="false"
-              data-cycle-hide-non-active="true"
+              data-cycle-loop="1"
               >
               <div class="slide">
                 <img src="img/openasic.jpg"/>
