nearly there… at least function wise

--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
           </div>
           <!-- /END COLUMN 3 -->
         </div>
+        <div class="row">
+          <a class="btn scroll pagedown" href="#quote">Next</a>
+        </div>
       </section>
     </article>
     <!-- / Intro!
@@ -183,14 +186,13 @@
               data-cycle-prev="#prev"
               data-cycle-next="#next"
               data-cycle-slides="> div.slide"
-              data-cycle-auto-height="6"
+              data-cycle-auto-height="4"
               data-cycle-allow-wrap="false"
-              data-cycle-hide-non-active="true"
               >
               
               <!-- SECTION 3 -->
               <!-- Logic basics! -->
-              <div class="slide span12" data-cycle-hash="three">
+              <div class="slide span12">
                 <div class="row toprow">
                   <img class="span4" src="img/1postits-yellow.png"/>
                   <img class="span4" src="img/2justicons.png"/>
@@ -207,7 +209,7 @@
   
               <!-- SECTION 4 -->
               <!-- ARguments and perspectives -->
-              <div class="slide span12" data-cycle-hash="four">
+              <div class="slide span12">
                 <div class="row toprow">
                   <img class="span4" src="img/4postitsandcode.png"/>
                   <img class="span4" src="img/5justcode.png"/>
@@ -242,7 +244,7 @@
   
               <!-- SECTION 6 -->
               <!-- Canvases / Closeup / Examine the logic threads -->
-              <div class="slide span12" data-cycle-hash="six">
+              <div class="slide span12">
                 <div class="row toprow graybg">
                   <img class="span8" src="img/unfoldpiece.png"/>
                   <img class="span4" src="img/logicthread.png"/>
@@ -261,7 +263,7 @@
               
               <!-- SECTION 7 -->
               <!-- Giant Explanation image -->
-              <div class="slide span12" data-cycle-hash="seven">
+              <div class="slide span12">
                 <div class="row toprow">
                   <img class="span12" src="img/explanation.jpg" alt="Explanatory image of D#C process flow"/>
                 </div>
@@ -274,7 +276,7 @@
   
               <!-- SECTION 8 -->
               <!-- Giant Explanation image -->
-              <div class="slide span12" data-cycle-hash="eight" id="revealing"> 
+              <div class="slide span12"id="revealing"> 
                 <div class="row toprow">
                   <div class="span4 offset4 reveal">
                     <img class="fadeorder one" src="img/end1-beam.png"/>
