--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
               data-cycle-auto-height="3"
               data-cycle-allow-wrap="false"
               data-cycle-loop="1"
+              data-cycle-pager="> .minipostit-pager"
+              data-cycle-pager-template='<span class="slide{{slideNum}} minipostit"><a href=#> {{slideNum}} </a></span>'
               >
               <!-- end SS declarations -->
               <div class="slide">
@@ -80,7 +82,8 @@
                 <p>Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>P/E = Total Cost of Utilization, or TCU</p>
               </div>
               <!-- pager! -->
-              <div class="cycle-pager"></div>
+<!--               <div class="cycle-pager"></div> -->
+              <div class="minipostit-pager"></div>
             </div>
           </div>
           <!-- /END COLUMN 1 -->
@@ -95,6 +98,8 @@
               data-cycle-auto-height="3"
               data-cycle-allow-wrap="false"
               data-cycle-loop="1"
+              data-cycle-pager="> .minipostit-pager"
+              data-cycle-pager-template='<span class="slide{{slideNum}} minipostit"><a href=#> {{slideNum}} </a></span>'
               >
               <div class="slide">
                 <img src="img/openasic.jpg"/>
@@ -113,7 +118,7 @@
                 <p class="">Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>P/E = Total Cost of Utilization, or TCU</p>
               </div>
               <!-- pager! -->
-              <div class="cycle-pager"></div>
+              <div class="minipostit-pager"></div>
             </div>
           </div>
           <!-- /END COLUMN 2 -->
@@ -128,6 +133,8 @@
               data-cycle-auto-height="3"
               data-cycle-allow-wrap="false"
               data-cycle-loop="1"
+              data-cycle-pager="> .minipostit-pager"
+              data-cycle-pager-template='<span class="slide{{slideNum}} minipostit"><a href=#> {{slideNum}} </a></span>'
               >
               <div class="slide">
                 <img src="img/openasic.jpg"/>
@@ -146,13 +153,13 @@
                 <p>Outcomes – <br/>Price/Experience = <br/>Net Value <br/><br/>O-P/E=N <br/><br/>P/E = Total Cost of Utilization, or TCU</p>
               </div>
               <!-- pager! -->
-              <div class="cycle-pager"></div>
+              <div class="minipostit-pager"></div>
             </div>
           </div>
           <!-- /END COLUMN 3 -->
         </div>
         <div class="row">
-          <a class="btn scroll pagedown" href="#quote">Next</a>
+          <a class="scroll btn pagedown" href="#quote">Next</a>
         </div>
       </section>
     </article>
@@ -165,7 +172,7 @@
       <section class="container">
         <div class="row">
           <h2 class="span8 offset2 bigquote"><span>&ldquo;</span>If at first, the idea is not absurd, then there is no hope for it.<span>&rdquo;</span></h2>
-          <p class="span8 offset2 byline">&mdash; Albert Einstein</p>
+          <p class="span8 offset2 byline piblue">&mdash; Albert Einstein</p>
         </div>
       </section>
     </article>
@@ -226,7 +233,7 @@
   
               <!-- SECTION 5 -->
               <!-- Canvases / Good Design Fast -->
-              <div class="slide span12" data-cycle-hash="five">
+              <div class="slide span12">
                 <div class="row toprow sizeadjust">
                   <img class="span4 canvas unfold" src="img/unfoldicon.png"/>
                   <img class="span4" src="img/6codeandicons.png"/>
