getting slidenav setup part2

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
               
               <!-- SECTION 7 -->
               <!-- Giant Explanation image -->
-              <div class="slide span12">
+              <div class="slide span12 measure">
                 <div class="row toprow">
                   <img class="span12" src="img/explanation.jpg" alt="Explanatory image of D#C process flow"/>
                 </div>
@@ -314,8 +314,8 @@
     
             <div class="span12 slidenav">
               <div class="row">
-                <div class="span2 pull-right text-right"><a href=# id="next" class="slidenav">&raquo;</a></div>
-                <div class="span2"><a href=# id="prev" class="slidenav">&laquo;</a></div>
+                <div class="span3 pull-right text-right"><a href=# id="next" class="slidenav">&raquo;</a></div>
+                <div class="span3"><a href=# id="prev" class="slidenav">&laquo;</a></div>
               </div>
             </div>
   
