slideshow nav controls almost done...

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <section class="container">
         <div class="row">
           <h2 class="span8 offset2 bigquote"><span>&ldquo;</span>If at first, the idea is not absurd, then there is no hope for it.<span>&rdquo;</span></h2>
-          <p class="span8 offset2 byline piblue">&mdash; Albert Einstein</p>
+          <p class="span8 offset2 byline">&mdash; Albert Einstein</p>
         </div>
       </section>
     </article>
@@ -192,6 +192,7 @@
               data-cycle-timeout="0"
               data-cycle-prev="#prev"
               data-cycle-next="#next"
+              data-cycle-swipe="true"
               data-cycle-slides="> div.slide"
               data-cycle-auto-height="4"
               data-cycle-allow-wrap="false"
@@ -359,7 +360,7 @@
     <script src="http://malsup.github.io/min/jquery.cycle2.min.js"></script>
     <script src="http://malsup.github.io/min/jquery.cycle2.center.min.js"></script>
     <script src="http://malsup.github.io/min/jquery.cycle2.swipe.min.js"></script>
-
+    <script src="http://malsup.github.io/ios6fix.js"></script>
     <!-- custom OOKB styles added on top -->
     <script src="js/dc.js"></script>
 
