--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
     <script src="http://malsup.github.io/min/jquery.cycle2.min.js"></script>
     <script src="http://malsup.github.io/min/jquery.cycle2.center.min.js"></script>
     <script src="http://malsup.github.io/min/jquery.cycle2.swipe.min.js"></script>
-    <script src="http://malsup.github.io/ios6fix.js"></script>
+<!--     <script src="http://malsup.github.io/ios6fix.js"></script> -->
     <!-- custom OOKB styles added on top -->
     <script src="js/dc.js"></script>
 
