try different swip configuration

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
               data-cycle-timeout="0"
               data-cycle-prev="#prev"
               data-cycle-next="#next"
-              data-cycle-swipe="true"
+              data-cycle-swipe=true
               data-cycle-slides="> div.slide"
               data-cycle-auto-height="4"
               data-cycle-allow-wrap="false"
@@ -359,8 +359,8 @@
     <script src="http://cdn.s3.ookb.co/bootstrap/js/bootstrap.js"></script>
     <script src="http://malsup.github.io/min/jquery.cycle2.min.js"></script>
     <script src="http://malsup.github.io/min/jquery.cycle2.center.min.js"></script>
-    <script src="http://malsup.github.io/min/jquery.cycle2.swipe.min.js"></script>
-<!--     <script src="http://malsup.github.io/ios6fix.js"></script> -->
+<!--     <script src="http://malsup.github.io/min/jquery.cycle2.swipe.min.js"></script> -->
+    <script src="http://malsup.github.io/ios6fix.js"></script>
     <!-- custom OOKB styles added on top -->
     <script src="js/dc.js"></script>
 
