getting rid of slideshow nav

--- a/index.html
+++ b/index.html
@@ -190,8 +190,7 @@
             <div class="cycle-slideshow ss"
               data-cycle-fx="fadeOut"
               data-cycle-timeout="0"
-              data-cycle-prev="#prev"
-              data-cycle-next="#next"
+              data-cycle-next="#slideshow"
               data-cycle-swipe=true
               data-cycle-slides="> div.slide"
               data-cycle-auto-height="4"
@@ -313,12 +312,14 @@
               <div class="minipostit-pager span6 offset3"></div>
             </div>
     
+<!--
             <div class="span12 slidenav">
               <div class="row">
                 <div class="span3 pull-right text-right"><a href=# id="next" class="slidenav">&raquo;</a></div>
                 <div class="span3"><a href=# id="prev" class="slidenav">&laquo;</a></div>
               </div>
             </div>
+-->
   
           </div>
         </div>
