--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     <header class="container">
        <nav class="masthead">
          <ul class="nav nav-pills pull-right">
-           <li class="active"><a class="scroll" href="#intro">start</a></li>
-           <li><a class="scroll" href="#logic">middle</a></li>
-           <li><a class="scroll" href="#stayinformed">stay informed</a></li>
+           <li class="active"><a class="scroll" href="#intro">O-P/E=N</a></li>
+           <li><a class="scroll" href="#logic">The Logic</a></li>
+           <li><a class="scroll" href="#stayinformed">Stay Informed</a></li>
          </ul>
          <h1 class="muted">design<span>#</span>code</h1>
        </nav>
