improvements, adding email area

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               </div>
               <div class="slide">
                 <div class="purplebg postit"><p class="lead bottomalign">The distinction between goods and services is a deeply-ingrained fallacy.</p></div>
-                <p>Beyond the obvious and superficial, when customers pay for a service, aren&rsquo;t they paying for &ldquo;goods?&rdquo; It&rsquo;s time to right a wrong.</p>
+                <p class="indent">Beyond the obvious and superficial, when customers pay for a service, aren&rsquo;t they paying for &ldquo;goods?&rdquo; It&rsquo;s time to right a wrong.</p>
               </div>
               <div class="slide">
                 <div class="bluebg postit"><p class="lead bottomalign">Services deliver particular outcomes and experiences when and where needed.</p></div>
@@ -103,7 +103,7 @@
               >
               <div class="slide">
                 <img src="img/openasic.jpg"/>
-                <p class="">It determines success in delivering complex value propositions;</p>
+                <p class="indent">It determines success in delivering complex value propositions;</p>
               </div>
               <div class="slide">
                 <div class="purplebg postit"><p class="lead bottomalign">Why do some services flourish and others, forgive the pun, flounder?</p></div>
@@ -138,7 +138,7 @@
               >
               <div class="slide">
                 <img src="img/openasic.jpg"/>
-                <p>It shapes business strategy and government policy;</p>
+                <p class="indent">It shapes business strategy and government policy;</p>
               </div>
               <div class="slide">
                 <div class="purplebg postit"><p class="lead bottomalign">The business model is pitch perfect and the strategy is sound. <br/><br/>Government policy is clear about about what’s best in the public interest.</p></div>
@@ -339,7 +339,22 @@
         <div class="row bottomrow">
           <div class="span4 offset4">
             <p>Or, let us watch it for you.</p>
-            <p>[EMAIL CAPTURE FIELD]</p>
+            <!-- Begin MailChimp Signup Form -->
+            <div id="mc_embed_signup">
+            <form action="http://ookb.us7.list-manage.com/subscribe/post?u=fd88621ece82a56f6c15af46f&amp;id=0d8e78f6e7" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            	
+            <div class="mc-field-group">
+            	<label for="mce-EMAIL">Email Address </label>
+            	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+            </div>
+            	<div id="mce-responses" class="clear">
+            		<div class="response" id="mce-error-response" style="display:none"></div>
+            		<div class="response" id="mce-success-response" style="display:none"></div>
+            	</div>	<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+            </form>
+            </div>
+            
+            <!--End mc_embed_signup-->
           </div>
         </div>
       </section>
