--- a/index.html
+++ b/index.html
@@ -371,12 +371,18 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script src="http://cdn.s3.ookb.co/bootstrap/js/bootstrap.js"></script>
-    <script src="http://malsup.github.io/min/jquery.cycle2.min.js"></script>
-    <script src="http://malsup.github.io/min/jquery.cycle2.center.min.js"></script>
+<!--     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script> -->
+    <script src="js/jquery-1.10.1.min.js"></script>
+<!--     <script src="http://cdn.s3.ookb.co/bootstrap/js/bootstrap.js"></script> -->
+    <script src="js/bootstrap.js"></script>
+<!--     <script src="http://malsup.github.io/min/jquery.cycle2.min.js"></script> -->
+    <script src="js/jquery.cycle2.min.js"></script>
+<!--     <script src="http://malsup.github.io/min/jquery.cycle2.center.min.js"></script> -->
+    <script src="js/jquery.cycle2.center.min.js"></script>
 <!--     <script src="http://malsup.github.io/min/jquery.cycle2.swipe.min.js"></script> -->
-    <script src="http://malsup.github.io/ios6fix.js"></script>
+<!--     <script src="js/jquery.cycle2.swipe.min.js"></script> -->
+<!--     <script src="http://malsup.github.io/ios6fix.js"></script> -->
+    <script src="js/ios6fix.js"></script>
     <!-- custom OOKB styles added on top -->
     <script src="js/dc.js"></script>
 
